--- a/load.Rmd
+++ b/load.Rmd
@@ -334,6 +334,8 @@ scalenum <- sum(l$All)
 ```
 
 ```{r, echo=FALSE, warning=FALSE, fig.cap="Rate of cycling in model scenarios. Note the total percentage cycling is equal to the area under each line."}
+levels(dfsp$scenario) <- gsub("_slc", "", levels(dfsp$scenario))
+dfsp$scenario <- factor(dfsp$scenario, levels(dfsp$scenario)[c(6, 1, 2, 4, 5, 3)])
 ggplot(dfsp) +
   geom_freqpoly(aes(dist_fast, weight = slc,
     color = scenario), binwidth = 1) +
