--- a/load.Rmd
+++ b/load.Rmd
@@ -52,8 +52,8 @@ region_path <- file.path(pct_data, region)
 if(!dir.exists(region_path)) dir.create(region_path) # create data directory
 
 # Minimum flow between od pairs to show. High means fewer lines
-mflow <- 10
-mflow_short <- 10
+mflow <- 200
+mflow_short <- 200
 
 # Distances
 mdist <- 20 # maximum euclidean distance (km) for subsetting lines
@@ -364,7 +364,7 @@ levels(dfspread$`|  Scenario`) <- gsub("_slc", "", levels(dfspread$`|  Scenario`
 The table below illustrates the same information in terms of the % of cyclists in each scenario by each distance band.
 
 ```{r, echo=FALSE}
-kable(dfspread, format = "html", digits = 1, caption = "Summary statistics of the rate of cycling by distances bands.")
+kable(dfspread, format = "html", digits = 1, caption = "Summary statistics of the rate of cycling by distance bands (percentages) and the total number of cycle trips per for each scenario (far right column).")
 ```
 
 ```{r, echo=FALSE, results='hide', fig.cap="Illustration of OD pairs on travel network"}
