--- a/load.Rmd
+++ b/load.Rmd
@@ -400,11 +400,25 @@ rnet <- overline(rft, "Bicycle")
 # object.size(rnet)
 # test the resulting plot
 plot(rnet, lwd = rnet$Bicycle / mean(rnet$Bicycle))
-for(i in scens){
-  rft@data[i] <- l@data[i]
-  rnet_tmp <- overline(rft, i)
-  rnet@data[i] <- rnet_tmp@data[i]
-  rft@data[i] <- NULL
+if(require(foreach) & require(doParallel)){
+  registerDoParallel()
+    # create list in parallel
+    rft_data_list <- foreach(i = scens) %dopar% {
+      rft@data[i] <- l@data[i]
+      rnet_tmp <- overline(rft, i)
+      rnet_tmp@data[i]
+    }
+    # save the results back into rnet with normal for loop
+    for(j in seq_along(scens)){
+      rnet@data <- cbind(rnet@data, rft_data_list[[j]])
+    }
+} else {
+  for(i in scens){
+    rft@data[i] <- l@data[i]
+    rnet_tmp <- overline(rft, i)
+    rnet@data[i] <- rnet_tmp@data[i]
+    rft@data[i] <- NULL
+  }
 }
 if(!"gendereq_slc" %in% scens)
   rnet$gendereq_slc <- NA
