--- a/load.Rmd
+++ b/load.Rmd
@@ -420,6 +420,23 @@ if(require(foreach) & require(doParallel)){
     rft@data[i] <- NULL
   }
 }
+
+# # Add maximum amount of interzone flow to rnet
+# create line midpoints (sp::over does not work with lines it seems)
+rnet_osgb = spTransform(rnet, CRS("+init=epsg:27700"))
+rnet_cents = SpatialLinesMidPoints(rnet_osgb)
+rnet_cents = spTransform(rnet_cents, CRS("+init=epsg:4326"))
+plot(rnet[1,])
+points(rnet_cents[1,])
+proj4string(rnet) = proj4string(zones)
+for(i in c("Bicycle", scens)){
+  nm = paste0(i, "_upto") # new variable name
+  zones@data[nm] = left_join(zones@data[c("geo_code")], cents@data[c("geo_code", i)])[2]
+  rnet@data = cbind(rnet@data, over(rnet_cents, zones[nm]))
+  zones@data[nm] = NULL
+}
+
+
 if(!"gendereq_slc" %in% scens)
   rnet$gendereq_slc <- NA
 ```
