--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -40,13 +40,33 @@ las_in_region <- las_in_region[1,]
 las_in_region <- las[las_in_region,]
 ```
 
-##Attribution
+## Attribution
 
 Please include this paragraph in any paper or report produced using these model results.
 
-Data for `r region` were generated at `r date()` by the National Propensity to Cycle Tool (PCT) Version 1, developed by the PCT academic team and released with an GPL Affero [Licence] (https://www.gnu.org/licenses/agpl-3.0). This version examines cycling potential for main-mode commute trips using Census 2011 travel to work data and Middle-Level Super Output areas (MSOASs) as zones. There were <!-- PLS ADD NUMBER COMMUTERS--> commuters in the study area, all of which were included in area-based analysis. Where cycle flows are routed, flows within zones ( <!--PLS add % of all flows that are within-zone--> of flows in `r region`) are excluded as are commuters with no fixed workplace. Of the `r n_flow_region` between-zone regular commute flows, selection criteria were used. For OD pairs with maximum Euclidean distance of `r params$mdist`, flows with a minimum flow of `r params$mflow` were selected. For OD pairs with maximum Euclidean distance of `r params$max_all_dist`, flows with a minimum flow of `r params$mflow_short` were selected. Adding those (overlapping) selection criteria resulted in `r pmflowa`% of all inter-zone commutes in the study area being selected, accounting for ( <!--PLS add % of all commutes included in area-based data that this represents--> of total commutes in `r region`). A modified version of the 2014 [HEAT tool] (http://www.euro.who.int/en/health-topics/environment-and-health/Transport-and-health/publications/2011/health-economic-assessment-tools-heat-for-walking-and-for-cycling.-methodology-and-user-guide.-economic-assessment-of-transport-infrastructure-and-policies.-2014-update) was used.
+Data for `r region` were generated at `r date()` by the National Propensity to
+Cycle Tool (PCT) Version 1, developed by the PCT academic team and released with
+an GPL Affero [Licence] (https://www.gnu.org/licenses/agpl-3.0). This version
+examines cycling potential for main-mode commute trips using Census 2011 travel
+to work data and Middle-Level Super Output areas (MSOASs) as zones. There were
+<!-- PLS ADD NUMBER COMMUTERS--> commuters in the study area, all of which were
+included in area-based analysis. Where cycle flows are routed, flows within
+zones ( <!--PLS add % of all flows that are within-zone--> of flows in `r region`
+) are excluded as are commuters with no fixed workplace. Of the `r n_flow_region`
+between-zone regular commute flows, selection criteria were used.
+For OD pairs with maximum Euclidean distance of `r params$mdist`, flows with a
+minimum flow of `r params$mflow` were selected. For OD pairs with maximum
+Euclidean distance of `r params$max_all_dist`, flows with a minimum flow of
+`r params$mflow_short` were selected. Adding those (overlapping) selection criteria
+resulted in `r pmflowa`% of all inter-zone commutes in the study area being
+selected, accounting for ( <!--PLS add % of all commutes included in area-based
+data that this represents--> of total commutes in `r region`). A modified
+version of the 2014 [HEAT tool]
+(http://www.euro.who.int/en/health-topics/environment-and-health/Transport-and-health/publications/2011/health-economic-assessment-tools-heat-for-walking-and-for-cycling.-methodology-and-user-guide.-economic-assessment-of-transport-infrastructure-and-policies.-2014-update)
+was used.
 
-##`r region`
+## `r region`
+
 ```{r, echo=FALSE, warning=FALSE, fig.cap="Rate of cycling in model scenarios. Note the total percentage cycling is equal to the area under each line."}
 levels(dfsp$scenario) <- gsub("_slc", "", levels(dfsp$scenario))
 levels(dfsp$scenario) <- R.utils::capitalize(levels(dfsp$scenario))
@@ -60,7 +80,7 @@ ggplot(dfsp) +
   theme_bw()
 
 dfsp$dist_band <- cut(dfsp$dist_fast, c(0, 2, 5, 10, 40))
-dfsum <- group_by(dfsp, scenario, dist_band) %>% 
+dfsum <- group_by(dfsp, scenario, dist_band) %>%
   summarise(percent = sum(slc))
 all_scen <- group_by(dfsp, scenario) %>% summarise(all = sum(slc))
 dfsum <- data.frame(dfsum)
@@ -81,11 +101,15 @@ The table below illustrates the same information in terms of the % of cyclists i
 kable(dfspread, format = "html", digits = 1, caption = "Summary statistics of the rate of cycling by distance bands (percentages) and the total number of cycle trips per for each scenario (far right column). The first row of data provides summary statistics (e.g. % trips by each distance band) for all modes. The subsequent rows report data on cycling only.", row.names = F)
 ```
 
-There are **`r n_flow_region`** OD pairs with origins and destinations in the study
-area. Of these, `r sum(sel_long)` meet the criteria that at least `r params$mflow` people travelled to work along OD pairs up to `r params$mdist` km in the 2011 Census. The additional selection criteria that at least `r params$mflow_short` people travelled to work along OD pairs up to `r params$max_all_dist` km was met by `r sum(sel_short)` OD pairs.
-Adding those (overlapping) selection criteria resulted in
-**`r nrow_flow`** or **`r pmflow`%** of all inter-zone OD pairs were selected in the region, accounting for
-**`r pmflowa`%** of inter-zone commutes in the study area.
+There are **`r n_flow_region`** OD pairs with origins and destinations in the
+study area. Of these, `r sum(sel_long)` meet the criteria that at least
+`r params$mflow` people travelled to work along OD pairs up to `r params$mdist` km
+in the 2011 Census. The additional selection criteria that at least
+`r params$mflow_short` people travelled to work along OD pairs up to
+`r params$max_all_dist` km was met by `r sum(sel_short)` OD pairs. Adding those
+(overlapping) selection criteria resulted in **`r nrow_flow`** or
+**`r pmflow`%** of all inter-zone OD pairs were selected in the region, accounting
+for **`r pmflowa`%** of inter-zone commutes in the study area.
 
 ## Introduction
 
@@ -173,7 +197,7 @@ lines(rq[nrow(l),], col = "green")
 
 The distance distribution of trips in the study area is displayed in the figure below, which compares the result with the distribution of trips nationwide.
 
-```{r, echo=FALSE, fig.cap="Distance distribution of all trips in study lines (blue) compared with national average (dotted bars)"}
+```{r, echo=FALSE, warning=F, fig.cap="Distance distribution of all trips in study lines (blue) compared with national average (dotted bars)"}
 luk <- readRDS(file.path(pct_bigdata, "l_sam8.Rds"))
 
 hdfl <- dplyr::select(l@data, All, dist_fast)
@@ -206,14 +230,10 @@ pl5km <- round(sum(l$All[l$dist_fast < 5]) /
 
 From the nationwide sample of trips, `r pl5kmuk`% of trips are less than 5km.
 
-In the case study area
-`r pl5km`% of sampled trips are less than 5km.
+In the case study area `r pl5km`% of sampled trips are less than 5km.
 
-Subsetting by distance (set
-to `r params$mdist` km) and removing inter-zone OD pairs
-further reduces the number of OD pairs 
-# from `r sum(sel_long | sel_short)`
-to `r nrow(l)`.
+Subsetting by distance (set to `r params$mdist` km) and removing inter-zone OD pairs
+further reduces the number of OD pairs from `r sum(sel_long | sel_short)` to `r nrow(l)`.
 
 ## The flow model
 
@@ -255,7 +275,7 @@ plot(rnet, lwd = rnet$Bicycle / mean(rnet$Bicycle))
 
 The time taken to run the analysis for this area is presented below:
 
-```{r}
-run_time
+```{r, echo=FALSE}
+round(run_time, 2)
 ```
 This document was produced automatically at `r Sys.time()`.
