Put list into global env

--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -23,7 +23,8 @@ l = readRDS(file.path(pct_data, region, "l.Rds"))
 rf = readRDS(file.path(pct_data, region, "rf.Rds"))
 rq = readRDS(file.path(pct_data, region, "rq.Rds"))
 rnet = readRDS(file.path(pct_data, region, "rnet.Rds"))
-load(file.path(pct_data, region, "params.RData"))
+params = readRDS(file.path(pct_data, region, "params.Rds"))
+list2env(x = params, envir = globalenv())
 if(!exists("regions"))
   regions <- readOGR(file.path(pct_bigdata, "regions-london.geojson"), layer = "OGRGeoJSON")
 source('shared_build.R')
